Get functions working & Fix entry point interface

--- a/meson.build
+++ b/meson.build
@@ -11,7 +11,10 @@ project(
 	],
 )
 
+dep_dlg = dependency('dlg', fallback: ['dlg', 'dlg_dep'])
+
 executable('lambdav', [
 		'compiler.cpp',
 		'output.cpp',
-	])
+	],
+	dependencies: dep_dlg)
