Factor out parser into own component

--- a/meson.build
+++ b/meson.build
@@ -16,5 +16,6 @@ dep_dlg = dependency('dlg', fallback: ['dlg', 'dlg_dep'])
 executable('lambdav', [
 		'compiler.cpp',
 		'output.cpp',
+		'parser.cpp',
 	],
 	dependencies: dep_dlg)
